Fix overflow errors in music player & currently playing song queue

--- a/react-vite/src/components/Navigation/MusicPlayer.css
+++ b/react-vite/src/components/Navigation/MusicPlayer.css
@@ -1,7 +1,7 @@
 .button-container {
   box-sizing: border-box;
-  width: 32px;
-  height: 32px;
+  min-width: 32px;
+  min-height: 32px;
   padding: 4px;
   display: flex;
   align-items: center;
@@ -15,8 +15,9 @@
 }
 
 .current-song-details {
-  width: 30vw;
+  width: 100%;
   display: flex;
+  flex-shrink: 1;
   justify-content: flex-start;
 }
 
@@ -37,6 +38,9 @@
 .current-song-title {
   font-size: 14px;
   font-weight: bold;
+  max-height: 32px;
+  overflow-wrap: anywhere;
+  overflow: auto;
 }
 
 .current-song-title-artist {
@@ -73,7 +77,7 @@
 
 .music-player-controls {
   background-color: black;
-  width: 40vw;
+  width: 100%;
   height: 72px;
   display: flex;
   flex-direction: column;
@@ -90,8 +94,9 @@
 }
 
 .music-player-right-div {
-  width: 30vw;
+  width: 100%;
   display: flex;
+  flex-shrink: 1;
   justify-content: flex-end;
 }
 
@@ -198,9 +203,11 @@
 }
 
 .volume-control {
-  width: 250px;
+  max-width: 250px;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 8px;
+  flex-shrink: 1;
 }
